# hqckem-edu

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: bench.rs
examples/: kat_tests.rs
src/: lib.rs
src/coders/: common.rs  mod.rs  reed_muller.rs  reed_solomon.rs
src/common/: barrett.rs  consts.rs  hash.rs  mod.rs  utils.rs
src/field/: gf.rs  mod.rs  vector.rs
src/hqckem/: kem.rs  mod.rs  pke.rs
src/nist_api/: mod.rs  nist_api.rs  tests.rs
src/samplers/: fixed_weight.rs  mod.rs
